fix restaurant form functionality, update restaurant controllers/routes/utils for readability

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -40,6 +40,18 @@
   height: 100%;
 }
 
+.profile {
+  background-image: url("");
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 @keyframes App-logo-spin {
   from {
